@@ -50,6 +50,27 @@ namespace libtorrent
 		static void free(char* const block);
 	};
 
+	struct TORRENT_EXPORT aligned_holder
+	{
+		aligned_holder(): m_buf(0) {}
+		aligned_holder(int size): m_buf(page_aligned_allocator::malloc(size)) {}
+		~aligned_holder() { if (m_buf) page_aligned_allocator::free(m_buf); }
+		char* get() const { return m_buf; }
+		void reset(char* buf = 0)
+		{
+			if (m_buf) page_aligned_allocator::free(m_buf);
+			m_buf = buf;
+		}
+		void swap(aligned_holder& h)
+		{
+			char* tmp = m_buf;
+			m_buf = h.m_buf;
+			h.m_buf =  tmp;
+		}
+	private:
+		char* m_buf;
+	};
+
 }
 
 #endif
