@@ -38,32 +38,21 @@ namespace libtorrent
 {
 
 	disk_buffer_holder::disk_buffer_holder(aux::session_impl& ses, char* buf)
-		: m_disk_pool(ses.m_disk_thread), m_buf(buf), m_num_blocks(1)
+		: m_disk_pool(ses.m_disk_thread), m_buf(buf)
 	{
 		TORRENT_ASSERT(buf == 0 || m_disk_pool.is_disk_buffer(buf));
 	}
 
 	disk_buffer_holder::disk_buffer_holder(disk_buffer_pool& iothread, char* buf)
-		: m_disk_pool(iothread), m_buf(buf), m_num_blocks(1)
+		: m_disk_pool(iothread), m_buf(buf)
 	{
 		TORRENT_ASSERT(buf == 0 || m_disk_pool.is_disk_buffer(buf));
 	}
 
-	disk_buffer_holder::disk_buffer_holder(disk_buffer_pool& iothread, char* buf, int num_blocks)
-		: m_disk_pool(iothread), m_buf(buf), m_num_blocks(num_blocks)
+	void disk_buffer_holder::reset(char* buf)
 	{
-		TORRENT_ASSERT(buf == 0 || m_disk_pool.is_disk_buffer(buf));
-	}
-
-	void disk_buffer_holder::reset(char* buf, int num_blocks)
-	{
-		if (m_buf)
-		{
-			if (m_num_blocks == 1) m_disk_pool.free_buffer(m_buf);
-			else m_disk_pool.free_buffers(m_buf, m_num_blocks);
-		}
+		if (m_buf) m_disk_pool.free_buffer(m_buf);
 		m_buf = buf;
-		m_num_blocks = num_blocks;
 	}
 
 	char* disk_buffer_holder::release()
@@ -75,11 +64,7 @@ namespace libtorrent
 
 	disk_buffer_holder::~disk_buffer_holder()
 	{
-		if (m_buf)
-		{
-			if (m_num_blocks == 1) m_disk_pool.free_buffer(m_buf);
-			else m_disk_pool.free_buffers(m_buf, m_num_blocks);
-		}
+		if (m_buf) m_disk_pool.free_buffer(m_buf);
 	}
 }
 
